big refactoring, things are prettier now

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -388,12 +388,283 @@
    "execution_count": 3
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-22T03:25:38.331809Z",
+     "start_time": "2024-11-22T03:25:38.303970Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df = pd.read_csv('model_results.csv')\n",
+    "df"
+   ],
+   "id": "65893771b12cd5f8",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                                Metric 'CS1_flat_100EVs_20km_SOCmin0.3'  \\\n",
+       "0                          Tariff type                             flat   \n",
+       "1                        Number of EVs                              100   \n",
+       "2         Average travel distance (km)                               20   \n",
+       "3                      Minimum SOC (%)                              0.3   \n",
+       "4                 Number of households                              100   \n",
+       "5                        Number of CPs                              100   \n",
+       "6              Max charging power (kW)                              1.3   \n",
+       "7               Total optimal cost ($)               41664.119238238054   \n",
+       "8    Investment & maintenance cost ($)                20767.12328767123   \n",
+       "9        Total household load cost ($)                19669.42216514016   \n",
+       "10          Total EV charging cost ($)               1069.2724283018538   \n",
+       "11                Grid import cost ($)               20738.694593442015   \n",
+       "12                     Other costs ($)               1.2655405581527814   \n",
+       "13        Average EV charging cost ($)               10.692724283018539   \n",
+       "14                   Peak EV load (kW)               10.386988552370278   \n",
+       "15              Peak total demand (kW)               157.03581656666665   \n",
+       "16               Peak grid import (kW)               157.03581656666665   \n",
+       "17             Average daily peak (kW)               138.12470240223834   \n",
+       "18  Peak-to-average power ratio (PAPR)                 1.92343880668421   \n",
+       "\n",
+       "   'CS1_flat_100EVs_20km_SOCmin0.4' 'CS1_tou_100EVs_20km_SOCmin0.3'  \\\n",
+       "0                              flat                             tou   \n",
+       "1                               100                             100   \n",
+       "2                                20                              20   \n",
+       "3                               0.4                             0.3   \n",
+       "4                               100                             100   \n",
+       "5                               100                             100   \n",
+       "6                               1.3                             2.4   \n",
+       "7                 41578.13361180737                40106.2707833276   \n",
+       "8                 20767.12328767123               20767.12328767123   \n",
+       "9                 19669.42216514016               18898.20203522419   \n",
+       "10                983.3112690277894              280.34076595205215   \n",
+       "11                20652.73343416795               19178.54280117624   \n",
+       "12               1.2410734014698872              3.5688779134626456   \n",
+       "13                9.833112690277893              2.8034076595205217   \n",
+       "14                8.820463891050798              28.324405411727817   \n",
+       "15               157.03581656666665              157.03581656666665   \n",
+       "16               157.03581656666665              157.03581656666665   \n",
+       "17               137.90130590857834                142.911908439206   \n",
+       "18               1.9314445764842332              1.9234388066842105   \n",
+       "\n",
+       "   'CS1_tou_100EVs_20km_SOCmin0.4'  \n",
+       "0                              tou  \n",
+       "1                              100  \n",
+       "2                               20  \n",
+       "3                              0.4  \n",
+       "4                              100  \n",
+       "5                              100  \n",
+       "6                              2.4  \n",
+       "7                40080.96171891218  \n",
+       "8                20767.12328767123  \n",
+       "9                18898.20203522419  \n",
+       "10              255.19508870620865  \n",
+       "11              19153.397123930397  \n",
+       "12               3.405490743886541  \n",
+       "13              2.5519508870620866  \n",
+       "14               27.18161059723016  \n",
+       "15              157.03581656666665  \n",
+       "16              157.03581656666665  \n",
+       "17               142.8683385727486  \n",
+       "18              1.9314445764842332  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Metric</th>\n",
+       "      <th>'CS1_flat_100EVs_20km_SOCmin0.3'</th>\n",
+       "      <th>'CS1_flat_100EVs_20km_SOCmin0.4'</th>\n",
+       "      <th>'CS1_tou_100EVs_20km_SOCmin0.3'</th>\n",
+       "      <th>'CS1_tou_100EVs_20km_SOCmin0.4'</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Tariff type</td>\n",
+       "      <td>flat</td>\n",
+       "      <td>flat</td>\n",
+       "      <td>tou</td>\n",
+       "      <td>tou</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Number of EVs</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Average travel distance (km)</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Minimum SOC (%)</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Number of households</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Number of CPs</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Max charging power (kW)</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>2.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Total optimal cost ($)</td>\n",
+       "      <td>41664.119238238054</td>\n",
+       "      <td>41578.13361180737</td>\n",
+       "      <td>40106.2707833276</td>\n",
+       "      <td>40080.96171891218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Investment &amp; maintenance cost ($)</td>\n",
+       "      <td>20767.12328767123</td>\n",
+       "      <td>20767.12328767123</td>\n",
+       "      <td>20767.12328767123</td>\n",
+       "      <td>20767.12328767123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Total household load cost ($)</td>\n",
+       "      <td>19669.42216514016</td>\n",
+       "      <td>19669.42216514016</td>\n",
+       "      <td>18898.20203522419</td>\n",
+       "      <td>18898.20203522419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Total EV charging cost ($)</td>\n",
+       "      <td>1069.2724283018538</td>\n",
+       "      <td>983.3112690277894</td>\n",
+       "      <td>280.34076595205215</td>\n",
+       "      <td>255.19508870620865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Grid import cost ($)</td>\n",
+       "      <td>20738.694593442015</td>\n",
+       "      <td>20652.73343416795</td>\n",
+       "      <td>19178.54280117624</td>\n",
+       "      <td>19153.397123930397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Other costs ($)</td>\n",
+       "      <td>1.2655405581527814</td>\n",
+       "      <td>1.2410734014698872</td>\n",
+       "      <td>3.5688779134626456</td>\n",
+       "      <td>3.405490743886541</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Average EV charging cost ($)</td>\n",
+       "      <td>10.692724283018539</td>\n",
+       "      <td>9.833112690277893</td>\n",
+       "      <td>2.8034076595205217</td>\n",
+       "      <td>2.5519508870620866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Peak EV load (kW)</td>\n",
+       "      <td>10.386988552370278</td>\n",
+       "      <td>8.820463891050798</td>\n",
+       "      <td>28.324405411727817</td>\n",
+       "      <td>27.18161059723016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Peak total demand (kW)</td>\n",
+       "      <td>157.03581656666665</td>\n",
+       "      <td>157.03581656666665</td>\n",
+       "      <td>157.03581656666665</td>\n",
+       "      <td>157.03581656666665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Peak grid import (kW)</td>\n",
+       "      <td>157.03581656666665</td>\n",
+       "      <td>157.03581656666665</td>\n",
+       "      <td>157.03581656666665</td>\n",
+       "      <td>157.03581656666665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Average daily peak (kW)</td>\n",
+       "      <td>138.12470240223834</td>\n",
+       "      <td>137.90130590857834</td>\n",
+       "      <td>142.911908439206</td>\n",
+       "      <td>142.8683385727486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Peak-to-average power ratio (PAPR)</td>\n",
+       "      <td>1.92343880668421</td>\n",
+       "      <td>1.9314445764842332</td>\n",
+       "      <td>1.9234388066842105</td>\n",
+       "      <td>1.9314445764842332</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 14
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "65893771b12cd5f8"
+   "id": "d2a5e6d0b137f49e"
   }
  ],
  "metadata": {
