some refactoring of the files and directory

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -14,8 +14,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "df_cost = pd.read_csv('df_cost.csv')\n",
-    "df_power = pd.read_csv('df_power.csv')"
+    "df_cost = pd.read_csv('results_data/df_cost.csv')\n",
+    "df_power = pd.read_csv('results_data/df_power.csv')"
    ],
    "outputs": [],
    "execution_count": 8
@@ -396,7 +396,7 @@
    },
    "cell_type": "code",
    "source": [
-    "df = pd.read_csv('model_results.csv')\n",
+    "df = pd.read_csv('results_data/model_results.csv')\n",
     "df"
    ],
    "id": "65893771b12cd5f8",
