started building sensitivity analysis scripts while checking unforeseen bugs

--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('simulation_results.csv')\n",
+    "df = pd.read_csv('simulation_results.metrics')\n",
     "df"
    ],
    "id": "65893771b12cd5f8",
