fixed config 3 bug, it seems to be working as intended but need to check again. also it runs v slowly now

--- a/notebooks/constraints_mapping.ipynb
+++ b/notebooks/constraints_mapping.ipynb
@@ -3,29 +3,21 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Constraints Mapping",
+   "source": "### Variable Names Mapping",
    "id": "8589c1f0ce65fd9"
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "\\begin{equation}\n",
-    "    \\sum_{i \\in \\mathcal{I}} y_{i,j,t} \\leq w_j \\;,\\quad \\forall j \\in \\mathcal{J} \\;,\\; \\forall t \\in \\mathcal{T}\n",
-    "\\end{equation}"
+    "| LaTeX Symbol | Var Name in Code                 | Description                                                                 |\n",
+    "|--------------|----------------------------------|-----------------------------------------------------------------------------|\n",
+    "| $w_j$        | is_cp_installed                  | binary variable that indicates whether CP j is installed                    |\n",
+    "| $x_{i,j}$    | is_ev_permanently_assigned_to_cp | binary variable that indicates whether EV i is permanently assigned to CP j |\n",
+    "| $y_{i,j,t}$  | ev_is_connected_to_cp_j          | binary variable that indicates whether EV i is connected to CP j at time t  |\n",
+    "| $n^{EV_{share}}_j$ | num_ev_per_cp | number of EVs assigned to CP j |\n"
    ],
-   "id": "a43330a3665dfc"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
-    "| LaTeX Label      | Description                           | Code Name Prefix  |\n",
-    "|------------------|---------------------------------------|-------------------|\n",
-    "| eq:power_binary  | Binary-constrained charging power     | power_binary      |\n",
-    "| eq:soc_departure | SOC min requirement at departure test | soc_min_departure |"
-   ],
-   "id": "fb9ae612c56b2edb"
+   "id": "6862ef960c169082"
   },
   {
    "metadata": {},
@@ -33,7 +25,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "f802ebe4c1324e7a"
+   "id": "201080957ebd9baf"
   }
  ],
  "metadata": {
